maze.lessons.maze.island.IslandMaze.scala.error
Escaper:30: error: value droite is not a member of Unit
possible cause: maybe a semicolon is missing before `value droite'?
  }droite()
   ^